@@ -9,4 +9,4 @@ Name: libpcrecpp
 Description: PCRECPP - C++ wrapper for PCRE
 Version: @PACKAGE_VERSION@
 Libs: -L${libdir} -lpcre -lpcrecpp
-Cflags: -I${includedir}
+Cflags: -I${includedir} @PCRE_STATIC_CFLAG@
